[gd_scene load_steps=4 format=3 uid="uid://c10upqfkmiwpg"]

[ext_resource type="Script" path="res://InteractArea.gd" id="1_kctr8"]
[ext_resource type="Texture2D" uid="uid://b61o8svo5hanf" path="res://Sprites/dialogBubble.png" id="2_7w525"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uj8o1"]

[node name="InteractArea" type="Area2D"]
script = ExtResource("1_kctr8")
x = 1.0
y = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uj8o1")

[node name="DialogBubble" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(5, -22)
texture = ExtResource("2_7w525")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
